--- a/settings/internal/com.kms.katalon.composer.testcase.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.properties
@@ -1,2 +1,5 @@
-#Thu Oct 21 23:46:37 ICT 2021
+#Thu Oct 21 23:50:43 ICT 2021
+<<<<<<<=HEAD
+=\=\=\=\=\=\=
+>>>>>>>=ff27f488bd0bc464a017e693d534fb74fd82d00c
 testCaseTag=""
